[CONFIG] 앱 설정 및 의존성 업데이트
- Next.js 앱 레이아웃 Supabase 인증 연동
- 대시보드 페이지 팀 가드 적용
- 홈페이지 리다이렉트 로직 개선
- 패키지 의존성 업데이트 (@dnd-kit, @tanstack/react-query 등)
- API 최적화 요약 문서 추가
- 전체 앱 구조를 팀 기반 워크플로우로 전환

--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.0",
+    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-devtools": "^5.87.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i": "^0.3.7",
     "jose": "^6.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "npm": "^11.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
