--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^0.5.3",
+    "@react-email/render": "^1.2.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.0",
     "@tanstack/react-query": "^5.87.1",
@@ -36,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
