--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:clean": "npm run clean && npm run dev"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.6.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -24,6 +25,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -36,6 +38,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "discord-api-types": "^0.38.26",
+    "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
     "i": "^0.3.7",
     "jose": "^6.1.0",
